More IOU troubleshooting

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -450,8 +450,7 @@
     }
    ],
    "source": [
-    "#CHAT GPT's code for calculating IOU for each individual box in the dataset to make our per-labeler score\n",
-    "#Not tested yet but seems likely\n",
+    "#Calculating IOU for each individual box in the dataset to make a per-label score\n",
     "\n",
     "import pandas as pd\n",
     "from shapely.geometry import box\n",
