--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "with open(path) as f:\n",
     "  df = pd.read_csv(f)\n",
     "  df = df[df[\"filename\"] != \"BDA_24C_20181107_1.JPG\"]\n",
-    "  df['bbox_orig'] = df['bbox_orig'].apply(ast.literal_eval)\n",
+    "  #df['bbox_orig'] = df['bbox_orig'].apply(ast.literal_eval)\n",
     "  #df['bbox_refined'] = df['bbox_refined'].apply(ast.literal_eval)\n",
     "\n",
     "#Refined annotations\n",
@@ -61,10 +61,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>annotation_ID</th>\n",
+       "      <th>bbox_orig</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labeler</th>\n",
+       "      <th>cat_orig</th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>cat_refined</th>\n",
+       "      <th>bbox_refined</th>\n",
+       "      <th>IOU</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[4428, 2707, 125, 103]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4445.5, 2719.5, 95.0, 80.5]</td>\n",
+       "      <td>0.593981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[4308, 2731, 105, 67]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4312.5, 2739.5, 98.0, 44.0]</td>\n",
+       "      <td>0.612935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[3707, 1761, 110, 101]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3725.5, 1779.0, 73.5, 70.5]</td>\n",
+       "      <td>0.466404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[3628, 1882, 90, 38]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3628.0, 1882.0, 92.0, 38.0]</td>\n",
+       "      <td>0.978261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>[3669, 1927, 69, 82]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3679.0, 1929.0, 65.0, 82.0]</td>\n",
+       "      <td>0.753031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  annotation_ID               bbox_orig                filename  \\\n",
+       "0           0              1  [4428, 2707, 125, 103]  BDA_12C_20181127_1.JPG   \n",
+       "1           1              2   [4308, 2731, 105, 67]  BDA_12C_20181127_1.JPG   \n",
+       "2           2              3  [3707, 1761, 110, 101]  BDA_12C_20181127_1.JPG   \n",
+       "3           3              4    [3628, 1882, 90, 38]  BDA_12C_20181127_1.JPG   \n",
+       "4           4              5    [3669, 1927, 69, 82]  BDA_12C_20181127_1.JPG   \n",
+       "\n",
+       "                 labeler        cat_orig  cluster_id     cat_refined  \\\n",
+       "0  steven_sesnie@fws.gov  Canadian Goose           0  Canadian Goose   \n",
+       "1  steven_sesnie@fws.gov  Canadian Goose           1  Canadian Goose   \n",
+       "2  steven_sesnie@fws.gov  Canadian Goose           2  Canadian Goose   \n",
+       "3  steven_sesnie@fws.gov  Canadian Goose           3  Canadian Goose   \n",
+       "4  steven_sesnie@fws.gov  Canadian Goose           4  Canadian Goose   \n",
+       "\n",
+       "                   bbox_refined       IOU  \n",
+       "0  [4445.5, 2719.5, 95.0, 80.5]  0.593981  \n",
+       "1  [4312.5, 2739.5, 98.0, 44.0]  0.612935  \n",
+       "2  [3725.5, 1779.0, 73.5, 70.5]  0.466404  \n",
+       "3  [3628.0, 1882.0, 92.0, 38.0]  0.978261  \n",
+       "4  [3679.0, 1929.0, 65.0, 82.0]  0.753031  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#Calculating IOU for each individual box in the dataset to make a per-label score\n",
+    "from shapely.geometry import box\n",
+    "\n",
     "def eval_bbox(row, col_name):\n",
     "    bbox_str = row[col_name]\n",
     "    if pd.notnull(bbox_str):\n",
@@ -89,8 +223,8 @@
     "    return iou\n",
     "\n",
     "# Apply the function to each row of the DataFrame and save the results in a new column\n",
-    "dgc['IOU'] = dgc.apply(calculate_iou, axis=1)\n",
-    "dgc.head()"
+    "df['IOU'] = df.apply(calculate_iou, axis=1)\n",
+    "df.head()"
    ]
   },
   {
