--- a/expert_crowd_agreement.ipynb
+++ b/expert_crowd_agreement.ipynb
@@ -140,8 +140,7 @@
     "                if iou(bbox1, bbox2) >= iou_threshold and class1 == class2:\n",
     "                    conf_matrix[class1 - 1, class2 - 1] += 1\n",
     "\n",
-    "    return conf_matrix\n",
-    "\n"
+    "    return conf_matrix"
    ]
   },
   {
