--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +59,134 @@
     "with open(refinedpath) as f:\n",
     "  ref = pd.read_csv(f)\n",
     "  ref['bbox'] = ref['bbox'].apply(ast.literal_eval)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label_id</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>bbox</th>\n",
+       "      <th>class_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>[4445.5, 2719.5, 95.0, 80.5]</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>[4312.5, 2739.5, 98.0, 44.0]</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>[3725.5, 1779.0, 73.5, 70.5]</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>[3628.0, 1882.0, 92.0, 38.0]</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>[3679.0, 1929.0, 65.0, 82.0]</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label_id                filename                          bbox  class_id\n",
+       "0         0  BDA_12C_20181127_1.JPG  [4445.5, 2719.5, 95.0, 80.5]         2\n",
+       "1         1  BDA_12C_20181127_1.JPG  [4312.5, 2739.5, 98.0, 44.0]         2\n",
+       "2         2  BDA_12C_20181127_1.JPG  [3725.5, 1779.0, 73.5, 70.5]         2\n",
+       "3         3  BDA_12C_20181127_1.JPG  [3628.0, 1882.0, 92.0, 38.0]         2\n",
+       "4         4  BDA_12C_20181127_1.JPG  [3679.0, 1929.0, 65.0, 82.0]         2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_area(row):\n",
+    "    bbox = row['bbox']\n",
+    "    xmin, ymin, w, h = bbox\n",
+    "    return w * h\n",
+    "\n",
+    "ref['area'] = ref.apply(calc_area, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class_id\n",
+       "1    16238.500000\n",
+       "2     3719.692857\n",
+       "3     2598.333601\n",
+       "Name: area, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref.groupby(\"class_id\")[\"area\"].mean()"
    ]
   },
   {
