experiments in label translation

--- a/fullimg_to_tilecoords.ipynb
+++ b/fullimg_to_tilecoords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "4         4  BDA_12C_20181127_1.JPG  [3679.0, 1929.0, 65.0, 82.0]         2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28745,7 +28745,7 @@
     }
    ],
    "source": [
-    "#Coordinates aren't gettting translated for some reason\n",
+    "#Coordinates aren't getting translated for some reason\n",
     "def translate_labels(original_size, tile_size, labels):\n",
     "    original_width, original_height = original_size\n",
     "    tile_width, tile_height = tile_size\n",
