prep tile analysis

--- a/expert_crowd_agreement.ipynb
+++ b/expert_crowd_agreement.ipynb
@@ -24,8 +24,8 @@
    "source": [
     "#Load the labels from the two files\n",
     "\n",
-    "crowd_labels_file = '/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/clean_crowd_benchmark.csv'\n",
-    "expert_labels_file = '/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/expertconsensus_superclass.csv'"
+    "crowd_labels_file = 'C:/Users/rowanconverse/Desktop/data/crowd_benchmark.csv'\n",
+    "expert_labels_file = 'C:/Users/rowanconverse/Desktop/data/expertconsensus_tiles.csv'"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usefull functions"
+    "Useful functions"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
