generating raw agreement counts

--- a/texture_calcs.ipynb
+++ b/texture_calcs.ipynb
@@ -83,7 +83,7 @@
     "print(f\"Range: {min_texture} - {max_texture}\")\n",
     "\n",
     "# Save the new dataframe to a CSV file\n",
-    "new_dataframe.to_csv(destination_folder+'textures1.csv', index=False)\n"
+    "new_dataframe.to_csv(destination_folder+'textures_dgc.csv', index=False)\n"
    ]
   },
   {
