recalc Pielou, SD

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "4       Goose  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
        "4      0.764205  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,50 +1048,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.27013856443242523"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.27013856443242523\n",
+      "0.3484775751869892\n"
+     ]
     }
    ],
    "source": [
     "#Average Overall Pielou's Index\n",
-    "pielou[\"pielou_index\"].mean()"
+    "print(pielou[\"pielou_index\"].mean())\n",
+    "print(pielou[\"pielou_index\"].std())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "consensus_class_ID\n",
-       "Crane         0.182399\n",
-       "Duck          0.228603\n",
-       "Goose         0.714145\n",
-       "Other Bird    0.861734\n",
-       "Seagull       0.283877\n",
-       "Name: pielou_index, dtype: float64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "consensus_class_ID\n",
+      "Crane         0.182399\n",
+      "Duck          0.228603\n",
+      "Goose         0.714145\n",
+      "Other Bird    0.861734\n",
+      "Seagull       0.283877\n",
+      "Name: pielou_index, dtype: float64\n",
+      "consensus_class_ID\n",
+      "Crane         0.271580\n",
+      "Duck          0.317838\n",
+      "Goose         0.255837\n",
+      "Other Bird    0.165835\n",
+      "Seagull       0.322362\n",
+      "Name: pielou_index, dtype: float64\n"
+     ]
     }
    ],
    "source": [
     "#Pielou's Index average per class\n",
-    "pielou.groupby(\"consensus_class_ID\")[\"pielou_index\"].mean()"
+    "print(pielou.groupby(\"consensus_class_ID\")[\"pielou_index\"].mean())\n",
+    "print(pielou.groupby(\"consensus_class_ID\")[\"pielou_index\"].std())"
    ]
   },
   {
@@ -1225,41 +1229,412 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>annotation_id</th>\n",
+       "      <th>bbox_orig</th>\n",
+       "      <th>cat_id_orig</th>\n",
+       "      <th>cat_orig</th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labeler_id</th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>cat_id_refined</th>\n",
+       "      <th>bbox_refined</th>\n",
+       "      <th>cat_refined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>956322</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>[616.8966064453125, 247.40164184570312, 78.357...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[634.05224609375, 260.4735412597656, 49.0, 80....</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>[555.4261474609375, 212.951171875, 53.36450195...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[555.4261474609375, 216.25, 53.0, 69.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>[351.4253234863281, 212.2756805419922, 69.5764...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[369.28125, 237.5530014038086, 61.433685302734...</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>[261.58392333984375, 108.92428588867188, 66.87...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[266.75, 120.83124542236328, 60.33087158203125...</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>956327</td>\n",
+       "      <td>[174.44451904296875, 22.46035385131836, 61.470...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[176.8125, 22.46035385131836, 52.0, 84.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   index  annotation_id  \\\n",
+       "0           0  956322         956323   \n",
+       "1           1  956323         956324   \n",
+       "2           2  956324         956325   \n",
+       "3           3  956325         956326   \n",
+       "4           4  956326         956327   \n",
+       "\n",
+       "                                           bbox_orig  cat_id_orig cat_orig  \\\n",
+       "0  [616.8966064453125, 247.40164184570312, 78.357...            3     Duck   \n",
+       "1  [555.4261474609375, 212.951171875, 53.36450195...            3     Duck   \n",
+       "2  [351.4253234863281, 212.2756805419922, 69.5764...            3     Duck   \n",
+       "3  [261.58392333984375, 108.92428588867188, 66.87...            3     Duck   \n",
+       "4  [174.44451904296875, 22.46035385131836, 61.470...            3     Duck   \n",
+       "\n",
+       "   image_id                         filename  labeler_id  cluster_id  \\\n",
+       "0     28077  20211201_Atrisco_0459_01_01.png        4721           0   \n",
+       "1     28077  20211201_Atrisco_0459_01_01.png        4721           1   \n",
+       "2     28077  20211201_Atrisco_0459_01_01.png        4721           8   \n",
+       "3     28077  20211201_Atrisco_0459_01_01.png        4721           2   \n",
+       "4     28077  20211201_Atrisco_0459_01_01.png        4721           3   \n",
+       "\n",
+       "   cat_id_refined                                       bbox_refined  \\\n",
+       "0             2.0  [634.05224609375, 260.4735412597656, 49.0, 80....   \n",
+       "1             2.0            [555.4261474609375, 216.25, 53.0, 69.0]   \n",
+       "2             2.0  [369.28125, 237.5530014038086, 61.433685302734...   \n",
+       "3             2.0  [266.75, 120.83124542236328, 60.33087158203125...   \n",
+       "4             2.0          [176.8125, 22.46035385131836, 52.0, 84.0]   \n",
+       "\n",
+       "  cat_refined  \n",
+       "0       Goose  \n",
+       "1       Goose  \n",
+       "2       Goose  \n",
+       "3       Goose  \n",
+       "4       Goose  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>annotation_id</th>\n",
+       "      <th>bbox_orig</th>\n",
+       "      <th>cat_id_orig</th>\n",
+       "      <th>cat_orig</th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labeler_id</th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>cat_id_refined</th>\n",
+       "      <th>bbox_refined</th>\n",
+       "      <th>cat_refined</th>\n",
+       "      <th>agree</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>956322</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>[616.8966064453125, 247.40164184570312, 78.357...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[634.05224609375, 260.4735412597656, 49.0, 80....</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>[555.4261474609375, 212.951171875, 53.36450195...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[555.4261474609375, 216.25, 53.0, 69.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>[351.4253234863281, 212.2756805419922, 69.5764...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[369.28125, 237.5530014038086, 61.433685302734...</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>[261.58392333984375, 108.92428588867188, 66.87...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[266.75, 120.83124542236328, 60.33087158203125...</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>956327</td>\n",
+       "      <td>[174.44451904296875, 22.46035385131836, 61.470...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[176.8125, 22.46035385131836, 52.0, 84.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   index  annotation_id  \\\n",
+       "0           0  956322         956323   \n",
+       "1           1  956323         956324   \n",
+       "2           2  956324         956325   \n",
+       "3           3  956325         956326   \n",
+       "4           4  956326         956327   \n",
+       "\n",
+       "                                           bbox_orig  cat_id_orig cat_orig  \\\n",
+       "0  [616.8966064453125, 247.40164184570312, 78.357...            3     Duck   \n",
+       "1  [555.4261474609375, 212.951171875, 53.36450195...            3     Duck   \n",
+       "2  [351.4253234863281, 212.2756805419922, 69.5764...            3     Duck   \n",
+       "3  [261.58392333984375, 108.92428588867188, 66.87...            3     Duck   \n",
+       "4  [174.44451904296875, 22.46035385131836, 61.470...            3     Duck   \n",
+       "\n",
+       "   image_id                         filename  labeler_id  cluster_id  \\\n",
+       "0     28077  20211201_Atrisco_0459_01_01.png        4721           0   \n",
+       "1     28077  20211201_Atrisco_0459_01_01.png        4721           1   \n",
+       "2     28077  20211201_Atrisco_0459_01_01.png        4721           8   \n",
+       "3     28077  20211201_Atrisco_0459_01_01.png        4721           2   \n",
+       "4     28077  20211201_Atrisco_0459_01_01.png        4721           3   \n",
+       "\n",
+       "   cat_id_refined                                       bbox_refined  \\\n",
+       "0             2.0  [634.05224609375, 260.4735412597656, 49.0, 80....   \n",
+       "1             2.0            [555.4261474609375, 216.25, 53.0, 69.0]   \n",
+       "2             2.0  [369.28125, 237.5530014038086, 61.433685302734...   \n",
+       "3             2.0  [266.75, 120.83124542236328, 60.33087158203125...   \n",
+       "4             2.0          [176.8125, 22.46035385131836, 52.0, 84.0]   \n",
+       "\n",
+       "  cat_refined  agree  \n",
+       "0       Goose      0  \n",
+       "1       Goose      0  \n",
+       "2       Goose      0  \n",
+       "3       Goose      0  \n",
+       "4       Goose      0  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#INDIVIDUAL LABELER METRICS\n",
     "#Goal: report avg count, ID consensus across images, break down by morphological group; also min/max individual vs group consensus\n",
     "\n",
-    "dgc['agree'] = 'No'\n",
-    "dgc.loc[dgc['cat_id_orig'] == dgc[\"cat_id_refined\"], 'agree'] = 'Yes'\n",
-    "seagull['agree'] = 'No'\n",
-    "seagull.loc[seagull['cat_id_orig'] == seagull[\"cat_id_refined\"], 'agree'] = 'Yes'\n",
+    "df['agree'] = 0\n",
+    "df.loc[df['cat_orig'] == df[\"cat_refined\"], 'agree'] = 1\n",
+    "df.head()\n",
     "\n",
     "#avg_agree = dgc.groupby(\"labeler_id\")[\"agree\"].value_counts().reset_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Yes    913693\n",
-       "No     278776\n",
-       "Name: agree, dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7503872556494475\n",
+      "0.43278903803594354\n"
+     ]
     }
    ],
    "source": [
-    "dgc[\"agree\"].value_counts()"
+    "print(df['agree'].mean())\n",
+    "print(df['agree'].std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  cat_refined  average_agree  std_deviation\n",
+      "0       Crane       0.950578       0.216747\n",
+      "1        Duck       0.929681       0.255685\n",
+      "2       Goose       0.736053       0.440772\n",
+      "3  Other Bird       0.538333       0.498944\n",
+      "4     Seagull       0.918064       0.274268\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by species class and calculate the proportion of \"yes\" values and the count of total values\n",
+    "grouped_data = df.groupby(\"cat_refined\")[\"agree\"].agg([\"sum\", \"count\"]).reset_index()\n",
+    "\n",
+    "# Calculate the average proportion of \"yes\" values directly without converting \"sum\" to an integer\n",
+    "grouped_data[\"average_agree\"] = grouped_data[\"sum\"] / grouped_data[\"count\"]\n",
+    "\n",
+    "# Calculate the standard deviation of the \"agree\" column per species class\n",
+    "grouped_data[\"std_deviation\"] = df.groupby(\"cat_refined\")[\"agree\"].std().reset_index()[\"agree\"]\n",
+    "\n",
+    "# Drop unnecessary columns from the grouped data DataFrame\n",
+    "grouped_data.drop(columns=[\"sum\", \"count\"], inplace=True)\n",
+    "\n",
+    "print(grouped_data)"
    ]
   },
   {
