add pielou index to consensus labels and export

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "4       Goose  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -923,6 +923,7 @@
        "      <th>cluster_id</th>\n",
        "      <th>filename</th>\n",
        "      <th>consensus_class_ID</th>\n",
+       "      <th>consensus_bbox</th>\n",
        "      <th>pielou_index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -932,6 +933,7 @@
        "      <td>-1</td>\n",
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.721928</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -939,6 +941,7 @@
        "      <td>0</td>\n",
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>Goose</td>\n",
+       "      <td>[634.05224609375, 260.4735412597656, 49.0, 80....</td>\n",
        "      <td>0.764205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -946,6 +949,7 @@
        "      <td>1</td>\n",
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>Goose</td>\n",
+       "      <td>[555.4261474609375, 216.25, 53.0, 69.0]</td>\n",
        "      <td>0.764205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -953,6 +957,7 @@
        "      <td>2</td>\n",
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>Goose</td>\n",
+       "      <td>[266.75, 120.83124542236328, 60.33087158203125...</td>\n",
        "      <td>0.764205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -960,6 +965,7 @@
        "      <td>3</td>\n",
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>Goose</td>\n",
+       "      <td>[176.8125, 22.46035385131836, 52.0, 84.0]</td>\n",
        "      <td>0.764205</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -974,15 +980,15 @@
        "3           2  20211201_Atrisco_0459_01_01.png              Goose   \n",
        "4           3  20211201_Atrisco_0459_01_01.png              Goose   \n",
        "\n",
-       "   pielou_index  \n",
-       "0      0.721928  \n",
-       "1      0.764205  \n",
-       "2      0.764205  \n",
-       "3      0.764205  \n",
-       "4      0.764205  "
+       "                                      consensus_bbox  pielou_index  \n",
+       "0                                                NaN      0.721928  \n",
+       "1  [634.05224609375, 260.4735412597656, 49.0, 80....      0.764205  \n",
+       "2            [555.4261474609375, 216.25, 53.0, 69.0]      0.764205  \n",
+       "3  [266.75, 120.83124542236328, 60.33087158203125...      0.764205  \n",
+       "4          [176.8125, 22.46035385131836, 52.0, 84.0]      0.764205  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,6 +1003,7 @@
     "cluster_id_list = []\n",
     "filename_list = []\n",
     "consensus_class_id_list = []\n",
+    "consensus_bbox_list = []\n",
     "pielou_index_list = []\n",
     "\n",
     "# Loop through each group and calculate Pielou's evenness index\n",
@@ -1005,6 +1012,7 @@
     "    cluster_id = name[1]\n",
     "    filename = name[0]\n",
     "    consensus_class_id = group['cat_refined'].iloc[0]  # Assumes all consensus IDs in the group are the same\n",
+    "    consensus_bbox = group['bbox_refined'].iloc[0]\n",
     "    \n",
     "    # Count the number of annotations in the group\n",
     "    num_annotations = len(group)\n",
@@ -1032,6 +1040,7 @@
     "    cluster_id_list.append(cluster_id)\n",
     "    filename_list.append(filename)\n",
     "    consensus_class_id_list.append(consensus_class_id)\n",
+    "    consensus_bbox_list.append(consensus_bbox)\n",
     "    pielou_index_list.append(evenness_index)\n",
     "\n",
     "# Create a new dataframe with the results\n",
@@ -1039,11 +1048,62 @@
     "    'cluster_id': cluster_id_list,\n",
     "    'filename': filename_list,\n",
     "    'consensus_class_ID': consensus_class_id_list,\n",
+    "    'consensus_bbox': consensus_bbox_list,\n",
     "    'pielou_index': pielou_index_list\n",
     "})\n",
     "\n",
     "# Display sample of the result dataframe\n",
     "pielou.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1449301\n",
+      "175146\n",
+      "175146\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(df))\n",
+    "print(len(grouped))\n",
+    "print(len(pielou))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "147357\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ONLY FOR EXPORT-- drop NaN values and check length\n",
+    "export = pielou.dropna()\n",
+    "print(len(export))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "savepath = \"C:\\\\Users\\\\rowanconverse\\\\OneDrive - University of New Mexico\\\\Projects\\\\DronesForDucks\\\\Data\\\\Labels\\\\PowerAnalysis\\\\\"\n",
+    "export.to_csv(savepath+\"consensusLabels_agreementIndex.csv\")"
    ]
   },
   {
